feat: RBAC system, table renames, audit logging and user management - Renamed tables: produtos->base, estoque->coletados - Added RBAC with roles and permissions panel - Added username login support with auto-generated emails - Added audit triggers for user changes - Added pagination to validade page - Added multi-select filters with new UI - Updated dashboard with new table references

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ node_modules/
 
 # Arquivos de banco de dados (SENSÍVEL - não subir!)
 database/
+
+# Supabase local (Edge Functions já estão no Cloud)
+supabase/
 *.sql
 
 # Documentação interna
