feat: Sistema de assinaturas e controle de trials
- Adiciona página de cadastro trial (trial.html)
- Adiciona confirmação de email (confirmar-trial.html)
- Adiciona página de planos (planos.html)
- Adiciona checkout success page (checkout-sucesso.html)
- Adiciona página de acesso bloqueado (bloqueado.html)
- Adiciona validações CPF/CNPJ e busca CEP (validations.js)
- Adiciona lógica de trial (trial.js)
- Adiciona integração Stripe (checkout.js)
- Adiciona middleware de controle de acesso (access-control.js)

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,11 @@ npm-debug.log*
 *.min.css.map
 
 *.JSON
+
+# Documentação
+abacatepay/documentation-main.zip
+abacatepay/
+
+# Planilhas de precificação (interno)
+preços.xlsx
+*.xlsx
