Atualizando logica trial

--- a/.gitignore
+++ b/.gitignore
@@ -73,4 +73,6 @@ preços.xlsx
 *.xlsx
 chaves-stripe.txt
 
-dashboard-demo.html
+LEMBRETES.txt
+stripe_backup_code.txt
+supabase-schema-akmlnywrafsaszfzanyx.pnf
